[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/BaseMenuPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/SettingsPanel.gd" type="Script" id=2]
[ext_resource path="res://art/UI/godot match 3 settings bar.png" type="Texture" id=3]
[ext_resource path="res://art/UI/Buttons/Sound On Button.png" type="Texture" id=4]
[ext_resource path="res://art/UI/Buttons/Sound Off Button.png" type="Texture" id=5]
[ext_resource path="res://art/UI/Buttons/Back Button.png" type="Texture" id=6]
[ext_resource path="res://art/ConfigurationPanel/Jauja.png" type="Texture" id=7]
[ext_resource path="res://art/ConfigurationPanel/Jauja_pressed.png" type="Texture" id=8]
[ext_resource path="res://art/ConfigurationPanel/Votemos.png" type="Texture" id=9]
[ext_resource path="res://art/ConfigurationPanel/Votemos_pressed.png" type="Texture" id=10]
[ext_resource path="res://art/ConfigurationPanel/Dictadura.png" type="Texture" id=11]
[ext_resource path="res://art/ConfigurationPanel/Dictadura_pressed.png" type="Texture" id=12]

[node name="SettingsPanel" index="0" instance=ExtResource( 1 )]
offset = Vector2( 576, 0 )
transform = Transform2D( 1, 0, 0, 1, 576, 0 )
script = ExtResource( 2 )

[node name="MarginContainer" parent="." index="0"]
editor/display_folded = false

[node name="GraphicAndButtons" parent="MarginContainer" index="0"]
margin_bottom = 1194.0

[node name="Graphic" parent="MarginContainer/GraphicAndButtons" index="0"]
margin_bottom = 488.0
rect_min_size = Vector2( 488, 488 )
texture = ExtResource( 3 )
expand = true

[node name="Buttons" parent="MarginContainer/GraphicAndButtons" index="1"]
margin_top = 518.0
margin_bottom = 1174.0

[node name="Button1" parent="MarginContainer/GraphicAndButtons/Buttons" index="0"]
margin_bottom = 256.0
rect_min_size = Vector2( 512, 256 )
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Button2" parent="MarginContainer/GraphicAndButtons/Buttons" index="1"]
margin_top = 276.0
margin_bottom = 404.0
rect_min_size = Vector2( 512, 128 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="EasyButton" type="TextureButton" parent="MarginContainer/GraphicAndButtons/Buttons" index="2"]
anchor_right = 0.89
margin_left = 100.0
margin_top = -100.0
margin_right = -313.04
margin_bottom = -36.0
rect_scale = Vector2( 1.5, 1.5 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="MediumButton" type="TextureButton" parent="MarginContainer/GraphicAndButtons/Buttons" index="3"]
margin_left = 250.0
margin_top = -100.0
margin_right = 314.0
margin_bottom = -36.0
rect_scale = Vector2( 1.5, 1.5 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="HardButton" type="TextureButton" parent="MarginContainer/GraphicAndButtons/Buttons" index="4"]
margin_left = 400.0
margin_top = -100.0
margin_bottom = -36.0
rect_scale = Vector2( 1.5, 1.5 )
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
[connection signal="pressed" from="MarginContainer/GraphicAndButtons/Buttons/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="MarginContainer/GraphicAndButtons/Buttons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/GraphicAndButtons/Buttons/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="MarginContainer/GraphicAndButtons/Buttons/MediumButton" to="." method="_on_MediumButton_pressed"]
[connection signal="pressed" from="MarginContainer/GraphicAndButtons/Buttons/HardButton" to="." method="_on_HardButton_pressed"]
